[package]
name = "craner-data-inspector"
version = "0.1.0"
description = "InfluxDB Lot Data Query Tool"
authors = []
edition = "2021"

[lib]
name = "check_db_data_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
rust_xlsxwriter = "0.79"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
